fix dark mode browser color problem

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 :root {
+  color-scheme: light only;
   --bgr-blue: #253878;
   --letter-gray: #7a7a7a;
   --bgr-gray: #03070f;
